test/scc/decl/semantic-errors/026.t
struct A
{
    int a : 1.0;
};